further refinement on activity log display; refactor work for discrete data on sensor graph

--- a/app/activity/activity.html
+++ b/app/activity/activity.html
@@ -18,7 +18,7 @@
         </div>
     </div>
     <span class="fa fa-add" ></span>
-    <md-button style="postion: absolute; bottom: 0; left: 50%" md-theme="{{themePrimaryButtons}}" ng-click="vm.findSensorNames($event)"
+    <md-button style="position: absolute; bottom: 0; left: calc(50% - 20px)" md-theme="{{themePrimaryButtons}}" ng-click="vm.findSensorNames($event)"
                ng-mouseenter="transparentButton = false" ng-mouseleave="transparentButton = true" class="hover-opacity md-fab md-mini md-primary">
         <md-icon class="fa" md-font-icon="fa-plus"></md-icon>
     </md-button>
