--- a/app/activity/activity.html
+++ b/app/activity/activity.html
@@ -6,11 +6,13 @@
     <div flex layout="column" style="overflow: auto">
         <timeline style="min-height: 250px; max-height: 250px; min-width: 100%" load-options-function="vm.loadTimelineOptions"
             redraw-function="vm.redrawTimeline" update-function="vm.updateTimeline" style="padding-top: 4px; height: 200px"></timeline>
-        <div ng-repeat="sensor in vm.sensorTimelines" layout="column" layout-align="start center"
+        <div ng-repeat="sensor in vm.sensorTimelines | orderBy:'name'" layout="column" layout-align="start center"
             style="position: relative; min-width: 100%; max-width: 100%; min-height: 230px; max-height: 230px">
             <h4 style="margin: 8px">{{sensor.name}}</h4>
             <span ng-click="vm.removeSensorTimeline(sensor)" md-ink-ripple class="icon-button fa fa-remove" style="position: absolute; right: 8px; top: 0"
                 title="Remove {{sensor.name}} timeline"></span>
+            <span ng-click="vm.addSensorTimeline(sensor, true)" md-ink-ripple class="icon-button fa fa-refresh" style="position: absolute; right: 38px; top: 0"
+                title="Refresh {{sensor.name}} timeline"></span>
             <multi-line-chart style="margin-left: 20px; min-width: calc(100% - 20px); max-width: calc(100% - 20px); max-height: 200px; min-height: 200px"
                 data="vm.sensorData[sensor.name]" redraw-function="vm.redrawFunctions[sensor.name]" clear-function="vm.clearFunctions[sensor.name]"
                 load-options-function="vm.loadOptionsFunctions[sensor.name]" remove-sensor-function="vm.removeFunctions[sensor.name]"
